# profile-changer

./: CMakeLists.txt  README.md
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  Profile.cpp  Profile.h  main.cpp
tests/: MainWindow_tests.cpp
